@@ -1,14 +1,39 @@
-## Getting Started
+## 시작하기
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+이 코드는 VisualStudio Code(VS Code)에서 Java로 작성된 것입니다. 따라서 VS Code 환경에서 실행하는 것을 권장합니다.
+이 앱은 JavaFX를 사용했습니다. [여기](https://gluonhq.com/products/javafx/)에서 JavaFX를 설치해 주십시오.
 
-## Folder Structure
+## 폴더 구조
 
-The workspace contains two folders by default, where:
+workspace는 다음 두개의 폴더를 기본적으로 포함합니다.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+- `src`: 메인 소스를 위한 폴더
+- `lib`: 메인 종속성을 위한 폴더
 
-## Dependency Management
+## 종속성 관리
 
-The `JAVA DEPENDENCIES` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-pack/blob/master/release-notes/v0.9.0.md#work-with-jar-files-directly).
+여러분의 종속성 관리를 위해 `JAVA DEPENDENCIES` view를 사용하면 됩니다. 자세한 사항은 [여기](https://github.com/microsoft/vscode-java-pack/blob/master/release-notes/v0.9.0.md#work-with-jar-files-directly)에서 확인할 수 있습니다.
+VS Code에서 앱을 실행하면 .vscode 폴더와 그 아래에 launch.json, setting.json이 생성될 것입니다.
+launch.json을 열어 아래의 코드를
+
+    "vmArgs": "--module-path=%JAVAFX_SDK_LIBRARY%  --add-modules=ALL-MODULE-PATH",
+
+아래의 줄 밑에 입력하고 저장해주십시오.
+%JAVAFX_SDK_LIBRARY%는 설치한 JavaFX의 lib의 절대경로입니다.
+```
+"name": "Launch App",
+"name": "Launch Current File",
+```
+
+## 애플리케이션 설명
+1. RS485통신을 하는 구동기노드를 USB로 Windows 컴퓨터에 연결합니다.
+2. Win키 + Pause Break키 > 장치 관리자 또는 Win키 + X키 > 장치 관리자 를 눌러 장치관리자에서 연결한 장치가 몇번 포트에 연결됐는지 확인합니다.
+3. 애플리케이션을 실행하고 좌측상단의 콤보박스에서 방금 연결한 장치를 선택하고 통신포트열기 버튼을 클릭합니다.
+4. 센서노드가 연결되면 오른쪽의 스위치, 개폐기 검색 버튼이 활성화됩니다. 스위치, 개폐기 검색 버튼을 클릭합니다.
+5. 검색이 정상적으로 완료되면 양액기 검색 버튼 밑에 '국번=xx, 장비연결됨...' 이라는 문구와 함께 오른쪽에 구동기노드의 기본 정보들이 보입니다.
+6. 활성화된 장치(센서)검색 버튼을 누르면 구동기노드가 제어 가능한 Slave를 검색해 센서를 찾습니다.
+7. 검색한 스위치와 개폐기 목록이 하단 박스에 각각의 패널에 담겨 보이고, 자동으로 1초마다 다음 Slave를 조회해 정보를 새로고침 합니다.
+8. 제어하고자 하는 스위치 또는 개폐기를 클릭하고 우측의 기능을 선택한뒤 필요한 경우 텍스트필드에 값을 입력하고 하단의 버튼을 누르면 즉시 실행하게 됩니다.
+
+## 스크린샷
+![](KD-Actuatormonitor-demo.gif)
